cmake_minimum_required(VERSION 3.8)

project(ILPS_LINEUNIT_ProtocolConverter)

set(CMAKE_CONFIGURATION_TYPES Debug Release)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG "${CMAKE_BINARY_DIR}/DEBUG")
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_DEBUG "${CMAKE_BINARY_DIR}/DEBUG")
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE "${CMAKE_BINARY_DIR}/RELEASE")
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELEASE "${CMAKE_BINARY_DIR}/RELEASE")

add_subdirectory(Main)
add_subdirectory(libember_slim)

set_property(DIRECTORY PROPERTY VS_STARTUP_PROJECT Main)
